#3288 erstellen des service lehrerminderleistungservice